--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header>
-     <nav>
-         Home
-         About 
-         Contact
-     </nav>    
+        <div class="navbar">
+     <nav class="topNav">
+         <a class="Home"href="#">Home</a>
+         <a class="About"href="#">About</a>
+         <a href="#">Contact</a> 
+     </nav>
+     </div>
     </header>
     <section class="title-container">
        
-               50 Influential Artists
-               Contact Us
+       <img src="home.png" class ="large"alt="home image" style="width:800px;" >
+               <div class="text"> Influential<br> Artists</div>
+               <div class="bottomtxt">Contact Us</div>
           
         <hr>
     </section>
