--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     </header>
     <section class="title-container">
        
-       <img src="home.png" class ="large"alt="home image" style="width:800px;" >
-               <div class="text"> Influential<br> Artists</div>
-               <div class="bottomtxt">Contact Us</div>
-          
-        <hr>
+       <img src="home.png" class ="large"alt="home image" >
+       <div class="textBox">
+               <div class="text">50 Influential<br> Artists</div>
+               <button class="bottomtxt">Contact Us</button>
+        </div>
     </section>
-
+<hr>
     <section class="artists-container">
         <div class="artist">
             <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg"/>
